--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
             return (winIf.includes(result)) ? 'won' : 'lost';
         }
 
+        function game (myInput) {
+            //plays five games and returns the winner
+            let myScore;
+            let computerScore;
+
+            for (let i = 0; i < 5; i++) {
+                if (singleGame(myInput) == "won") {
+                    myScore++;
+                }
+                else {
+                    computerScore++;
+                }
+            }
+
+            return (computerScore < myScore) ? "Congratulations, you won!" : "Better luck next time!";
+        }
 
         let me = prompt("Please type rock,paper, or scissors: ");
     </script>
